fix spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ body{
   width: 100%;
   background-color: hsl(0, 0%, 100%);
   border-radius: 20px;
-  margin-top: 80px;
+  margin-top: 150px;
   margin-bottom: 50px;
   padding: 50px 25px;
   box-shadow: 0px 20px 40px var(--very-dark-grayish-blue, hsl(0, 0%, 29%));
